--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             /* Layer 1: Subtle clipart pattern (very light dots) */
             background-image: radial-gradient(circle, rgba(255,255,255,0.05) 1px, transparent 1px),
                               /* Layer 2: Transparent color overlay (40% opaque to show 60% image) */
-                              linear-gradient(to bottom right, rgba(224, 247, 250, 0.4), rgba(194, 233, 251, 0.4)),
+                              linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), /* Darker overlay */
                               /* Layer 3: Satellite image */
-                              url('https://www.uc3m.es/ss/Satellite?blobcol=urldata&blobkey=id&blobtable=MungoBlobs&blobwhere=1371556746670&ssbinary=true');
+                              url('https://images.unsplash.com/photo-1543722530-d2c320790761?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
             
             background-size: 20px 20px, cover, cover; /* Sizes for each layer */
             background-position: center center, center center, center center;
