--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
             </video>
             <div id="about-overlay"></div>
             <div class="content-wrapper">
-                <img src="https://scontent-hkg1-2.xx.fbcdn.net/v/t39.30808-6/493334436_626215743752314_4712431554108028776_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=h-XpZfPF7s4Q7kNvwGwpZ_z&_nc_oc=AdnNFT4ivDOQJ9GSa_G_LGeRlbiCH8lq-4BlbR7CwbNPvXehlP4EmJPoC9kY3JRaz4w&_nc_zt=23&_nc_ht=scontent-hkg1-2.xx&_nc_gid=PxDIbNj-qWiB3Xk3OAJldg&oh=00_AfTeQNvY7BgcQZqCgYR3HF4yGQeSc_yi-qen89DoZw0vcw&oe=6880F736" alt="Puspendu Biswas Paul Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover shadow-xl border-4 border-cyan-300"> <!-- Replace with your profile picture URL -->
+                <img src="https://media.licdn.com/dms/image/v2/D5603AQF8CqLTT-6mLg/profile-displayphoto-crop_800_800/B56ZfDuE0KHUAM-/0/1751335327095?e=1756339200&v=beta&t=OfjbHsNv8LaUx3LUMhd1TCkYWWJn-OG2cTI9ZcUFOnQ" alt="Puspendu Biswas Paul Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover shadow-xl border-4 border-cyan-300"> <!-- Replace with your profile picture URL -->
                 <h1 class="text-5xl md:text-6xl font-extrabold header-text mb-2 leading-tight">Puspendu Biswas Paul</h1>
                 <p class="max-w-4xl mx-auto text-lg header-text">
-                    A highly motivated and dedicated professional with a strong background in Synthetic Aperture Radar (SAR) data, Artificial Intelligence (AI), and remote sensing. Committed to leveraging advanced technologies to address complex geospatial challenges. Expertise includes developing AI-driven models for SAR data analysis, enabling enhanced environmental monitoring and disaster management.
+                    A motivated learner and student with a strong background in Synthetic Aperture Radar (SAR) data, Artificial Intelligence (AI), and remote sensing. Committed to leveraging advanced technologies to address complex geospatial challenges. Expertise includes developing AI-driven models for SAR data analysis, enabling enhanced environmental monitoring and disaster management.
                 </p>
                 <div class="mt-6 flex justify-center space-x-4">
                     <a href="mailto:puspendu.buaa@gmail.com" class="header-link hover:text-white transition duration-300">
@@ -307,10 +307,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-md card-hover-effect border border-blue-200">
                     <h3 class="font-bold text-xl mb-3 text-blue-700">Languages & Databases</h3>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
+                        <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Python (Pytorch and Tensorflow)</span>
                         <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">JavaScript</span>
                         <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">C/C++ (Arduino)</span>
                         <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">MySQL</span>
+                        <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Latex</span>
                     </div>
                 </div>
                  <!-- Skill Card -->
@@ -318,7 +319,7 @@
                     <h3 class="font-bold text-xl mb-3 text-purple-700">Data Analysis & AI</h3>
                      <div class="flex flex-wrap gap-2">
                         <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Deep Learning</span>
-                        <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Using AI efficiently</span>
+                        <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Using Generative and Agentic AI efficiently</span>
                         <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Investigative Research</span>
                         <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Scientific Writing</span>
                         <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Statistical Analysis</span>
@@ -328,17 +329,18 @@
                 <div class="bg-white p-6 rounded-lg shadow-md card-hover-effect border border-green-200">
                     <h3 class="font-bold text-xl mb-3 text-green-700">Remote Sensing & GIS</h3>
                      <div class="flex flex-wrap gap-2">
-                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">ArcGIS Pro</span>
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">ArcGIS Pro (with extensions)</span>
                         <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Google Earth Engine</span>
                         <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">SNAP</span>
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Erdas Imagine</span>
                     </div>
                 </div>
                  <!-- Skill Card -->
                 <div class="bg-white p-6 rounded-lg shadow-md card-hover-effect border border-orange-200">
                     <h3 class="font-bold text-xl mb-3 text-orange-700">Satellite & Engineering</h3>
                      <div class="flex flex-wrap gap-2">
-                        <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">SAR</span>
-                        <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">GNSS-R</span>
+                        <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">SAR Applications</span>
+                        <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">GNSS-R Applications</span>
                         <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">Weather Satellite Data</span>
                         <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">Use of Chinese satellite systems</span>
                         <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">SolidWorks</span>
