--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
             // Journey Data
             const journeyData = [
-                { type: 'Education', date: 'Sept 2024 - July 2026 (Expected)', title: 'Masters in Space Technology Applications (Remote Sensing and GIS)', company: 'Beihang University', location: 'Hangzhou, China', details: 'Recipient of the Chinese Government Scholarship.' },
+                { type: 'Education', date: 'Sept 2024 - June 2026 (Expected)', title: 'Masters in Space Technology Applications (Remote Sensing and GIS)', company: 'Beihang University', location: 'Hangzhou, China', details: 'Recipient of the Chinese Government Scholarship.' },
                 { type: 'Work', date: 'Aug 2023 - Dec 2023', title: 'Intern', company: 'RIMES', location: 'Dhaka, Bangladesh', details: 'Contributed to a dynamic team focused on disaster preparedness and early warning systems. Gained hands-on experience in data analysis, modeling, and risk assessment.' },
                 { type: 'Work', date: 'Mar 2021 - Jan 2023', title: 'Research Assistant', company: 'Sylhet Agricultural University', location: 'Sylhet, Bangladesh', details: 'Managed data for drought prediction, conducted statistical analysis, and maintained lab equipment.' },
                 { type: 'Education', date: 'Jan 2018 - Jan 2023', title: 'B.Sc in Agricultural Engineering', company: 'Sylhet Agricultural University', location: 'Sylhet, Bangladesh', details: 'Key courses included Agricultural Meteorology, Hydrology, Environmental Engineering, and Water Pollution and Treatment.' },
@@ -533,7 +533,7 @@
 
             // Volunteering Data
             const volunteeringData = [
-                { date: 'April 2025 - Present', title: 'Researcher (Voluntary)', company: 'National Oceanographic And Maritime Institute (NOAMI)', location: 'Dhaka, Bangladesh', details: 'Engaged in GIS, Mapping, and Spatial Analysis projects as a voluntary contributor.' },
+                { date: 'April 2025 - Present', title: 'Researche Member', company: 'National Oceanographic And Maritime Institute (NOAMI)', location: 'Dhaka, Bangladesh', details: 'Engaged in GIS, Mapping, and Spatial Analysis projects as a voluntary contributor.' },
                 { date: 'April 2025 - Present', title: 'Member', company: 'South Asian Meteorological Association', location: 'Dhaka, Bangladesh', details: 'Engaged in SAR application, flood detection and Spatial Analysis projects as a voluntary contributor.' },
             ];
             const volunteeringContainer = document.querySelector('#volunteering .grid');
@@ -574,6 +574,7 @@
 
             // Publication Data & Filtering
             const publications = [
+                { title:'Spatio-Temporal Assessment of Land Degradation Dynamics and the Impact of the 2021 Hydrological Shift in Apo District, Abuja Municipal Area Council, Federal Capital Territory (F.C.T), Nigeria, Using Multi-Spectral Remote Sensing Indices', category: 'Under Review' },
                 { title: 'Remote sensing based impact assessment of 2024 Monsoon flood in the South-east Bangladesh', category: 'Under Review' },
                 { title: 'Spatio-Temporal Dynamics and Machine Learning-Based Hotspot Classification of Artificial Light at Night in Nigeria (2014-2024): An AI assisted Geospatial Analysis.', category: 'Ongoing' },
                 { title: 'Spatio-Temporal Dynamics and Machine Learning-Based Hotspot Classification of Artificial Light at Night in Bangladesh (2014-2024): An AI assisted Geospatial Analysis.', category: 'Ongoing' },
