--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
                 <div class="bg-white p-6 rounded-lg shadow-md card-hover-effect border border-purple-200">
                     <h3 class="font-bold text-xl mb-3 text-purple-700">Data Analysis & AI</h3>
                      <div class="flex flex-wrap gap-2">
-                        <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Deep Learning</span>
-                        <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Using Generative and Agentic AI efficiently</span>
+                        <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Deep Learning(ResNET, MMsegmentation)</span>
+                        <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Using Generative and Agentic AI efficiently (LLM models)</span>
                         <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Investigative Research</span>
                         <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Scientific Writing</span>
                         <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Statistical Analysis</span>
@@ -343,8 +343,8 @@
                         <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">GNSS-R Applications</span>
                         <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">Weather Satellite Data</span>
                         <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">Use of Chinese satellite systems</span>
+                        <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">UAV Photogrammetry and Data Collection</span>
                         <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">SolidWorks</span>
-                        <span class="bg-orange-100 text-orange-800 text-sm font-medium px-3 py-1 rounded-full">AutoCAD 2D</span>
                     </div>
                 </div>
                  <!-- Skill Card -->
